app/manifests/checkout-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout
  namespace: retail-app
  labels:
    app: checkout
    project: karatu-2025-capstone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: checkout
  template:
    metadata:
      labels:
        app: checkout
    spec:
      containers:
        - name: checkout
          image: public.ecr.aws/aws-containers/retail-store-sample-checkout:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "128m"
            limits:
              memory: "256Mi"
              cpu: "256m"
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: checkout
  namespace: retail-app
spec:
  selector:
    app: checkout
  ports:
    - port: 80
      targetPort: 8080
