app/manifests/orders-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
  namespace: retail-app
  labels:
    app: orders
    project: karatu-2025-capstone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          image: public.ecr.aws/aws-containers/retail-store-sample-orders:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "128m"
            limits:
              memory: "512Mi"
              cpu: "256m"
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 45
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: orders
  namespace: retail-app
spec:
  selector:
    app: orders
  ports:
    - port: 80
      targetPort: 8080
